{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 20,
  "lineage": "f96507e8-c91d-8839-da58-453d497ba62b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235892586543:internet-gateway/igw-0889b8d3b1e4a7da3",
            "id": "igw-0889b8d3b1e4a7da3",
            "owner_id": "235892586543",
            "vpc_id": "vpc-0bf9c298807bb4514"
          },
          "dependencies": [
            "aws_vpc.Myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0889b8d3b1e4a7da3",
            "id": "r-rtb-04041141c4d5875ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04041141c4d5875ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyIGW",
            "aws_route_table.public_route",
            "aws_vpc.Myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Privaterouttable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235892586543:route-table/rtb-0c8f60e7144dc261d",
            "id": "rtb-0c8f60e7144dc261d",
            "owner_id": "235892586543",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRT"
            },
            "tags_all": {
              "Name": "PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf9c298807bb4514"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Publicroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235892586543:route-table/rtb-0ae3914b810b112ce",
            "id": "rtb-0ae3914b810b112ce",
            "owner_id": "235892586543",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf9c298807bb4514"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235892586543:route-table/rtb-04041141c4d5875ce",
            "id": "rtb-04041141c4d5875ce",
            "owner_id": "235892586543",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf9c298807bb4514"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c6444ba42ca958d",
            "route_table_id": "rtb-0c8f60e7144dc261d",
            "subnet_id": "subnet-062e5259604b0e916"
          },
          "dependencies": [
            "aws_route_table.Privaterouttable",
            "aws_subnet.Private_subnet",
            "aws_vpc.Myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09706317b77d1cf61",
            "route_table_id": "rtb-04041141c4d5875ce",
            "subnet_id": "subnet-0678a941caf245016"
          },
          "dependencies": [
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.Myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235892586543:subnet/subnet-062e5259604b0e916",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.181.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062e5259604b0e916",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235892586543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bf9c298807bb4514"
          },
          "dependencies": [
            "aws_vpc.Myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235892586543:subnet/subnet-0678a941caf245016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.181.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0678a941caf245016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235892586543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bf9c298807bb4514"
          },
          "dependencies": [
            "aws_vpc.Myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235892586543:vpc/vpc-0bf9c298807bb4514",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.181.0.0/16",
            "default_network_acl_id": "acl-073187823d0ad134f",
            "default_route_table_id": "rtb-05c6981d94f79666d",
            "default_security_group_id": "sg-01fee3fbbc004589d",
            "dhcp_options_id": "dopt-09992ccf219371a87",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf9c298807bb4514",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c6981d94f79666d",
            "owner_id": "235892586543",
            "tags": {
              "Name": "ProjectVPC"
            },
            "tags_all": {
              "Name": "ProjectVPC"
            }
          }
        }
      ]
    }
  ]
}